--- a/Chip8Interpreter/Chip8Interpreter.csproj
+++ b/Chip8Interpreter/Chip8Interpreter.csproj
@@ -46,14 +46,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Adaptors\Interfaces\KeypadInputAdaptor.cs" />
+    <Compile Include="Adaptors\WindowsForms\KeyboardInputAdaptor.cs" />
+    <Compile Include="Core\CPU.cs" />
+    <Compile Include="Core\Display.cs" />
+    <Compile Include="Core\Keypad.cs" />
+    <Compile Include="Core\Memory.cs" />
+    <Compile Include="Core\Chip8System.cs" />
+    <Compile Include="Core\Timer.cs" />
+    <Compile Include="Core\Types\UInt12.cs" />
+    <Compile Include="Core\Types\UInt4.cs" />
+    <Compile Include="Core\Types\UInt8.cs" />
+    <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainWindow.Designer.cs">
+      <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MainWindow.resx">
+      <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
